<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:src="@drawable/image_moriarty" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_padding"
        android:gravity="center_horizontal"
        android:text="@string/text_view_forgot_password"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_for_text_view" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_view_need_for_password"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_for_text_view">

    </TextView>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/layout_margin_padding"
        android:background="@color/white"
        android:text="@string/textViewUserName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="@dimen/text_size_for_edit_text" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_reset_password"
        android:textSize="@dimen/text_size_for_button" />

    <Button
        android:id="@+id/buttonCancelled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancelled">
    </Button>

</LinearLayout>