<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:src="@drawable/image_moriarty" />

    <TextView
        android:textSize="@dimen/text_size_for_text_view"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_padding"
        android:text="@string/textview"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextEmail"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_padding"
        android:background="@color/white"
        android:text="@string/textViewUserName"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="@dimen/text_size_for_edit_text"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:textAlignment="center"
 
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/layout_margin_padding"
        android:textColor="@color/black"
        android:text="@string/textViewPassword"
        android:textSize="@dimen/text_size_for_edit_text"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/buttonConnect"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/text_size_for_button"
        android:layout_weight="1"
        android:text="@string/buttonConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>

        <Button
            android:layout_weight="1"
            android:id="@+id/buttonRegister"
            android:text="@string/buttonRegister"
            android:textSize="@dimen/text_size_for_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewForgotPassword"
        android:layout_gravity="center_horizontal" />

</LinearLayout>