<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:src="@drawable/image_moriarty" />

    <TextView
        android:textSize="@dimen/text_size_for_text_view"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_padding"
        android:text="@string/text_view_register"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/layout_margin_padding"
        android:background="@color/white"
        android:text="@string/textViewUserName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="@dimen/text_size_for_edit_text" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:textAlignment="center"

        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/layout_margin_padding"
        android:textColor="@color/black"
        android:text="@string/textViewFindPassword"
        android:textSize="@dimen/text_size_for_edit_text"></EditText>

    <EditText
        android:id="@+id/editTextPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/layout_margin_padding"
        android:background="@color/white"
        android:text="@string/textViewFindPasswordRepeat"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_for_edit_text"></EditText>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonRegister"
        android:textSize="@dimen/text_size_for_button" />

</LinearLayout>