<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_margin_padding"
    android:orientation="vertical">

    <TableLayout
        android:paddingLeft="@dimen/text_padding_left_fourth_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_padding"
        android:layout_marginRight="@dimen/layout_margin_padding">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSetDate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewBeginWork" />

            <TextView
                android:id="@+id/editTextBeginWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSetDate3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewFinishWork" />

            <TextView
                android:id="@+id/editTextFinishWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewBreakTime" />

            <TextView
                android:id="@+id/editTextBreakTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewWorkShift" />

            <TextView
                android:id="@+id/spinnerWorkShift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewRatePerHour"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewRatePerHour" />

            <TextView
                android:id="@+id/editTextRatePerHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTotalForDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/textViewTotalForDay"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/textViewTotalHours"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/textViewTotalHour"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_for_text_view"
                android:textStyle="bold"></TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewTotalMoney"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/textViewTotalMoney"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"></TextView>
        </TableRow>

    </TableLayout>

</LinearLayout>